--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container"></div>
+    
+    <div>
+      <label for="pen-size">Pen size:</label>
+      <select id="pen-size" class="pen-size">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4" selected>4</option>
+        <option value="5">5</option>
+      </select>
+    </div>
 
+    <div>
+      <label for="pen-type">Pen type:</label> 
+      <select id="pen-type" class="pen-type">
+        <option value="pencil" selected>Pencil</option>
+        <option value="marker">Marker</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="pen-color">Pen color:</label>
+      <input type="color" id="pen-color" class="pen-color" value="#000000">
     </div>
 
     <script src="script.js"></script>
