feat: Allow user to choose pen type and color

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       <input type="color" id="pen-color" class="pen-color" value="#000000">
     </div>
 
+    <div>
+      <label for="technicolor">Technicolor</label>
+      <input type="checkbox" id="technicolor" class="technicolor">
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
