feat: Add technicolor option

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div>
-      <label for="technicolor">Technicolor</label>
+      <label for="technicolor">Technicolor:</label>
       <input type="checkbox" id="technicolor" class="technicolor">
     </div>
 
