feat: Add instruction for user

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <div class="container"></div>
       
       <div class="menu">
+        <div class="instruction">
+          <h3>Click to paint!</h3>
+        </div>
+
         <div>
           <label for="pen-size">Pen size:</label>
           <select id="pen-size" class="pen-size">
@@ -41,6 +45,7 @@
           <label for="technicolor">Technicolor:</label>
           <input type="checkbox" id="technicolor" class="technicolor">
         </div>
+
       </div>
     </div>
 
